--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,11 @@ button{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    display: none;
+}
+
+.category__film.visible {
+    display: block;
 }
 
 .category__film-banner{
@@ -165,6 +170,7 @@ button{
     padding: 6% 5% 5% 8%;
     width: 100%;
     height: 40%;
+    top: 13%;
     background: rgba(0, 0, 0, 0.5);
     display: flex;
     flex-direction: column;
@@ -205,17 +211,6 @@ button{
     
 }
 
-
-.category__film:nth-child(3),
-.category__film:nth-child(4) {
-    display: none;
-}
-
-.category__film:nth-child(5),
-.category__film:nth-child(6)  {
-    display: none;
-} 
-
 .category__see-more{
     width: 100%;
     max-width: 214px;
@@ -225,8 +220,28 @@ button{
     border: none;
     border-radius: 25px;
     font-size: 20px;
+    display: none;
 }
 
+.category__see-more.visible {
+    display: block;
+}
+
+.category__see-less{
+    width: 100%;
+    max-width: 214px;
+    height: 40px;
+    background-color: #FA0B0B;
+    color: white;
+    border: none;
+    border-radius: 25px;
+    font-size: 20px;
+    display: none;
+}
+
+.category__see-less.visible {
+    display: block;
+}
 /* DROPDOWN */
 
 .category__selector {
@@ -251,8 +266,7 @@ button{
 .category__dropdown-trigger {
     padding-left: 13px;
     padding-right: 29px;
-    width: 100%;
-    max-width: 285px;
+    width: 86%;
     height: 68px;
     border: 1px solid black;
     cursor: pointer;
@@ -274,16 +288,25 @@ button{
                 display: none;
                 position: absolute;
                 top: 100%;
-                left: 0;
-                width: 100%;
+                width: 86%;
                 background: white;
-                border: 1px solid #ccc;
                 list-style: none;
                 margin: 0;
+                padding: 0;
                 box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-                padding: 10px;
                 cursor: pointer;
                 transition: background 0.3s;
+                z-index: 1;
+
+                li {
+                    display: flex;
+                    align-items: center;
+                    border: 1px solid black;
+                    height: 60px;
+                    font-size: 32px;
+                    font-weight: 600;
+                    padding-left: 10px;
+                }
 }
 
 
