--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 html {
-    max-width: 767px; /* BP 767px -> 768px 1023px -> 1024px  */
+    /*  max-width: 667px; BP 667px -> 668px 1023px -> 1024px  */
     margin: auto;
 }
 
@@ -145,9 +145,15 @@ button{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    justify-content: flex-start;
     gap: 30px;
+
+    overflow: hidden;
+    max-height: initial;
+    transition: max-height 1s ease-out;
 }
+
 
 .category__film {
     position: relative;
@@ -158,9 +164,23 @@ button{
     justify-content: center;
     align-items: center;
     display: none;
+    transition: transform 0.3s ease-in-out;
+    transition: opacity 0.3s ease-out;
+}
+
+.category__film:hover {
+    transform: scale(1.03);
+}
+
+/* Films supplémentaires cachés */
+.category__film:not(.visible) {
+    display: none;
+    transition: opacity 0.3s ease-out, display 0.3s step-end; /* Empêche un saut */
+    display: none;
 }
 
 .category__film.visible {
+    opacity: 1;
     display: block;
 }
 
@@ -211,7 +231,7 @@ button{
     
 }
 
-.category__see-more{
+.category__button {
     width: 100%;
     max-width: 214px;
     height: 40px;
@@ -221,6 +241,8 @@ button{
     border-radius: 25px;
     font-size: 20px;
     display: none;
+    align-self: center;
+    margin-top: 26px;
 }
 
 .category__see-more.visible {
@@ -228,15 +250,8 @@ button{
 }
 
 .category__see-less{
-    width: 100%;
-    max-width: 214px;
-    height: 40px;
-    background-color: #FA0B0B;
-    color: white;
-    border: none;
-    border-radius: 25px;
-    font-size: 20px;
     display: none;
+    align-self: center;
 }
 
 .category__see-less.visible {
@@ -332,6 +347,11 @@ button{
     z-index: 1000;
     overflow-y: auto; 
     padding: 20px;
+    animation: fadeIn 0.2s;
+}
+
+.modal.closing {
+    animation: fadeOut 0.2s;
 }
 
 .modal__content {
@@ -342,6 +362,7 @@ button{
     border: 6px solid black;
     padding: 28px 28px 28px 28px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    animation: modalTranslateIn 0.3s;
 }
 
 .modal__details {
@@ -411,3 +432,29 @@ button{
     text-align: left;
 }
 
+@keyframes modalTranslateIn {
+    from {
+        transform: translateY(20%);
+    }
+    to {
+        transform: translateY(0%);
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
